# Embedded_Systems

ADC/: adc1.c  strain_gauge.c
DMA/: dma.c
Project/: CMakeLists.txt  ads.c  ads.h  definition.h  main.c  pca.c  pca.h
ads1115_emulation/: CMakeLists.txt  ads1115.c
blink/: CMakeLists.txt  blink_simple.c
interrupt_func/: CMakeLists.txt  blink_simple.c  irq_button.c
intrrupt_2core/: CMakeLists.txt  core1_led.c
keypad/: CMakeLists.txt  keypad.c  keypad.h  lcd.c  lcd.h  main.c
pca9685_emulation/: pca9685.c
pwm/: CMakeLists.txt  count_freq.c  freq.c  pwm.c
timer/: CMakeLists.txt  measure.c  measure_time.c
